--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Preethi L - Web Application Developer</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
-        <h1>Preethi L</h1>
-        <p>Web Application Developer</p>
+        <div class="container">
+            <h1>Preethi L</h1>
+            <p>Web Application Developer</p>
+        </div>
     </header>
     <nav>
         <ul>
@@ -19,33 +22,57 @@
         </ul>
     </nav>
     <section id="about">
-        <h2>About Me</h2>
-        <img src="img/profile.jpg" alt="Profile Picture">
-        <p>As a dedicated Web Application Developer, I am on a journey to master the art of creating seamless online experiences. My toolkit includes HTML, CSS, JavaScript, Angular, C#, and .NET, and I thrive on weaving these technologies together to build robust and user-friendly interfaces.</p>
-        <p>I am driven by the little "aha" moments—those times when a tricky bug finally makes sense or when a project comes together just right. With a Bachelor's degree in Information Science and Engineering, I approach problems from diverse angles, seeing every hurdle as a chance to learn and grow.</p>
-        <p>Currently, I am gaining hands-on experience at Datazymes, where I have contributed to multiple projects, including the development of dynamic front-end interfaces and the integration of secure file management systems. My work is guided by Agile methodologies and Software Engineering best practices, ensuring high-quality and reliable solutions.</p>
-        <p>When I'm not crafting code, you'll find me exploring new technologies, learning from the community, and probably sipping too much coffee. Let's connect to explore exciting professional opportunities and collaborate on crafting impactful solutions together!</p>
+        <div class="container">
+            <h2>About Me</h2>
+            <img src="img/profile.jpg" alt="Profile Picture">
+            <p>As a dedicated Web Application Developer, I am on a journey to master the art of creating seamless online experiences. My toolkit includes HTML, CSS, JavaScript, Angular, C#, and .NET, and I thrive on weaving these technologies together to build robust and user-friendly interfaces.</p>
+            <p>I am driven by the little "aha" moments—those times when a tricky bug finally makes sense or when a project comes together just right. With a Bachelor's degree in Information Science and Engineering, I approach problems from diverse angles, seeing every hurdle as a chance to learn and grow.</p>
+            <p>Currently, I am gaining hands-on experience at Datazymes, where I have contributed to multiple projects, including the development of dynamic front-end interfaces and the integration of secure file management systems. My work is guided by Agile methodologies and Software Engineering best practices, ensuring high-quality and reliable solutions.</p>
+            <p>When I'm not crafting code, you'll find me exploring new technologies, learning from the community, and probably sipping too much coffee. Let's connect to explore exciting professional opportunities and collaborate on crafting impactful solutions together!</p>
+        </div>
     </section>
     <section id="projects">
-        <h2>Projects</h2>
-        <ul>
-            <li>
-                <h3>Project M4 - Angular</h3>
-                <p>Developed dynamic front-end interfaces using Angular, Node.js, and Express, creating RESTful APIs and leveraging libraries like Highcharts for data visualization. Integrated Google Cloud Storage for efficient and secure file management.</p>
-            </li>
-            <li>
-                <h3>Intellia Project - .NET</h3>
-                <p>Contributed to the development of Intellia, a flagship competitor intelligence platform, utilizing .NET technologies to architect RESTful APIs in C# for seamless data retrieval from SSMS databases. Implemented a feature-rich interface using HTML, CSS, Vue.js, and Bootstrap, enabling users to manage role-based alerts with functionalities to edit, publish, or save locally.</p>
-            </li>
-        </ul>
+        <div class="container">
+            <h2>Projects</h2>
+            <ul>
+                <li>
+                    <h3>Project M4 - Angular</h3>
+                    <p>Developed dynamic front-end interfaces using Angular, Node.js, and Express, creating RESTful APIs and leveraging libraries like Highcharts for data visualization. Integrated Google Cloud Storage for efficient and secure file management.</p>
+                </li>
+                <li>
+                    <h3>Intellia Project - .NET</h3>
+                    <p>Contributed to the development of Intellia, a flagship competitor intelligence platform, utilizing .NET technologies to architect RESTful APIs in C# for seamless data retrieval from SSMS databases. Implemented a feature-rich interface using HTML, CSS, Vue.js, and Bootstrap, enabling users to manage role-based alerts with functionalities to edit, publish, or save locally.</p>
+                </li>
+            </ul>
+        </div>
     </section>
     <section id="contact">
-        <h2>Contact</h2>
-        <p>Email: <a href="mailto:preethipreethu211@gmail.com">preethipreethu211@gmail.com</a></p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/preethi-gowda-3943561a6/">https://www.linkedin.com/in/preethi-gowda-3943561a6/</a></p>
+        <div class="container">
+            <h2>Contact</h2>
+            <p>Email: <a href="mailto:preethipreethu211@gmail.com"><i class="fas fa-envelope"></i></a></p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/preethi-gowda-3943561a6/"><i class="fab fa-linkedin"></i></a></p>
+            <p>Contact Form: <a href="#" id="contact-form-link"><i class="fas fa-id-badge"></i></a></p>
+        </div>
     </section>
+    <div id="contact-form-modal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <form action="https://formspree.io/f/YOUR_FORMSPREE_ID" method="POST">
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required>
+                <label for="subject">Subject:</label>
+                <input type="text" id="subject" name="subject" required>
+                <label for="message">Message:</label>
+                <textarea id="message" name="message" required></textarea>
+                <button type="submit">Send</button>
+            </form>
+        </div>
+    </div>
     <footer>
         <p>&copy; 2024 Preethi L</p>
     </footer>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
