updated styles and background

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     <section id="about">
         <div class="container">
             <h2>About Me</h2>
-            <img src="img/profile.jpg" alt="Profile Picture">
-            <p>As a dedicated Web Application Developer, I am on a journey to master the art of creating seamless online experiences. My toolkit includes HTML, CSS, JavaScript, Angular, C#, and .NET, and I thrive on weaving these technologies together to build robust and user-friendly interfaces.</p>
-            <p>I am driven by the little "aha" moments—those times when a tricky bug finally makes sense or when a project comes together just right. With a Bachelor's degree in Information Science and Engineering, I approach problems from diverse angles, seeing every hurdle as a chance to learn and grow.</p>
-            <p>Currently, I am gaining hands-on experience at Datazymes, where I have contributed to multiple projects, including the development of dynamic front-end interfaces and the integration of secure file management systems. My work is guided by Agile methodologies and Software Engineering best practices, ensuring high-quality and reliable solutions.</p>
-            <p>When I'm not crafting code, you'll find me exploring new technologies, learning from the community, and probably sipping too much coffee. Let's connect to explore exciting professional opportunities and collaborate on crafting impactful solutions together!</p>
+            <img src="img/profile.jpg" alt="Profile Picture" class="profile-img">
+            <p>As a dedicated Web Application Developer, I am on a journey to master the art of creating seamless online experiences. My toolkit includes HTML, CSS, JavaScript, Angular, C#, and .NET.</p>
+            <p>I am driven by the little "aha" moments—those times when a tricky bug finally makes sense or when a project comes together just right. I approach problems from diverse angles, seeing every hurdle as a chance to learn and grow.</p>
+            <p>Currently, I am gaining hands-on experience at Datazymes, where I have contributed to multiple projects, ensuring high-quality and reliable solutions.</p>
+            <p>When I'm not crafting code, you'll find me exploring new technologies, learning from the community, and probably sipping too much coffee.</p>
         </div>
     </section>
     <section id="projects">
@@ -37,11 +37,11 @@
             <ul>
                 <li>
                     <h3>Project M4 - Angular</h3>
-                    <p>Developed dynamic front-end interfaces using Angular, Node.js, and Express, creating RESTful APIs and leveraging libraries like Highcharts for data visualization. Integrated Google Cloud Storage for efficient and secure file management.</p>
+                    <p>Developed dynamic front-end interfaces using Angular, Node.js, and Express, creating RESTful APIs and leveraging libraries like Highcharts.</p>
                 </li>
                 <li>
                     <h3>Intellia Project - .NET</h3>
-                    <p>Contributed to the development of Intellia, a flagship competitor intelligence platform, utilizing .NET technologies to architect RESTful APIs in C# for seamless data retrieval from SSMS databases. Implemented a feature-rich interface using HTML, CSS, Vue.js, and Bootstrap, enabling users to manage role-based alerts with functionalities to edit, publish, or save locally.</p>
+                    <p>Contributed to the development of Intellia, utilizing .NET technologies to architect RESTful APIs in C# for seamless data retrieval.</p>
                 </li>
             </ul>
         </div>
@@ -49,9 +49,11 @@
     <section id="contact">
         <div class="container">
             <h2>Contact</h2>
-            <p>Email: <a href="mailto:preethipreethu211@gmail.com"><i class="fas fa-envelope"></i></a></p>
-            <p>LinkedIn: <a href="https://www.linkedin.com/in/preethi-gowda-3943561a6/"><i class="fab fa-linkedin"></i></a></p>
-            <p>Contact Form: <a href="#" id="contact-form-link"><i class="fas fa-id-badge"></i></a></p>
+            <div class="contact-icons">
+                <a href="mailto:preethipreethu211@gmail.com" class="icon"><img src="img/email-icon.png" alt="Email"></a>
+                <a href="https://www.linkedin.com/in/preethi-gowda-3943561a6/" class="icon"><img src="img/linkedin-icon.png" alt="LinkedIn"></a>
+                <a href="#" id="contact-form-link" class="icon"><img src="img/contactform-icon.jpg" alt="Contact Form"></a>
+            </div>
         </div>
     </section>
     <div id="contact-form-modal" class="modal">
